--- a/manifest.plist
+++ b/manifest.plist
@@ -12,19 +12,19 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://USERNAME.github.io/REPO/app.ipa</string>
+          <string>https://rongchien2025.github.io/ios-install/goirong.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>com.yourcompany.yourapp</string>
+        <string>com.mygdx.goirong</string>
         <key>bundle-version</key>
         <string>1.0.0</string>
         <key>kind</key>
         <string>software</string>
         <key>title</key>
-        <string>Tên App</string>
+        <string>Gọi Rồng Online</string>
       </dict>
     </dict>
   </array>
