--- a/manifest.plist
+++ b/manifest.plist
@@ -18,7 +18,7 @@
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>com.mygdx.goirong</string>
+        <string>com.CommitteeSupervision.gov</string>
         <key>bundle-version</key>
         <string>1.0.0</string>
         <key>kind</key>
