--- a/manifest.plist
+++ b/manifest.plist
@@ -12,7 +12,7 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://rongchien2025.github.io/ios-install/goirong.ipa</string>
+          <string>https://github.com/rongchien2025/game/releases/download/game/goirong.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
