--- a/manifest.plist
+++ b/manifest.plist
@@ -18,9 +18,9 @@
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>com.CommitteeSupervision.gov</string>
+        <string>com.mygdx.game</string>
         <key>bundle-version</key>
-        <string>1.0.0</string>
+        <string>1.8</string>
         <key>kind</key>
         <string>software</string>
         <key>title</key>
