--- a/manifest.plist
+++ b/manifest.plist
@@ -24,7 +24,7 @@
         <key>kind</key>
         <string>software</string>
         <key>title</key>
-        <string>Gọi Rồng Online</string>
+        <string>machth</string>
       </dict>
     </dict>
   </array>
