--- a/manifest.plist
+++ b/manifest.plist
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
-"http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>items</key>
-  <array>
-    <dict>
-      <key>assets</key>
-      <array>
+    <key>items</key>
+    <array>
         <dict>
-          <key>kind</key>
-          <string>software-package</string>
-          <key>url</key>
-          <string>https://github.com/rongchien2025/game/releases/download/game/test1.ipa</string>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>https://github.com/rongchien2025/game/releases/download/game/goirong.ipa</string>
+                </dict>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>com.mygdx.game</string>
+                <key>bundle-version</key>
+                <string>1.8</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>title</key>
+                <string>RongChien</string>
+            </dict>
         </dict>
-      </array>
-      <key>metadata</key>
-      <dict>
-        <key>bundle-identifier</key>
-        <string>com.CommitteeSupervision.gov</string>
-        <key>bundle-version</key>
-        <string>1.8.1</string>
-        <key>kind</key>
-        <string>software</string>
-        <key>title</key>
-        <string>machth</string>
-      </dict>
-    </dict>
-  </array>
+    </array>
 </dict>
 </plist>
