--- a/manifest.plist
+++ b/manifest.plist
@@ -23,7 +23,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>RongChien</string>
+                <string>Gọi Rồng Online</string>
             </dict>
         </dict>
     </array>
